--- a/apps/api/src/templates/reRequestResetPassword.html
+++ b/apps/api/src/templates/reRequestResetPassword.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Confirmation</title>
+    <title>Password Reset</title>
 </head>
 <body>
-    <h3>Welcome aboard!</h3>
+    <h3>Password Reset Request</h3>
 
     <p>
-        Dear, new user
+        Dear {{ name }},
         <br>
         <br>
-        Welcome to WearDrobe! We're excited to have you join our community. To get started and enjoy all the features we offer, please verify your email & setup your account.
+        We noticed that you have requested a new password reset link because your previous token has expired or has already been used. You can reset your password using the new link below.
         <br>
         <br>
-        Click the link below to verify your email:
+        Click the link below to reset your password:
     </p>
 
     <a href="{{ link }}" target="_blank">
@@ -25,7 +25,7 @@
         border-radius: 6px;
         border: 0px;
         background-color: #FDE047;"
-        >Verify</button>
+        >Reset Password</button>
     </a>
 </body>
 </html>
