--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -94,3 +94,7 @@
         @apply flex flex-col lg:flex-row items-start w-full gap-1 lg:items-center justify-between;
     }
 }
+
+.scrollcontrol {
+    scroll-margin: 500px;
+}
