feat: add WEAR-30 & create mutation stock

--- a/apps/api/src/templates/invoice.html
+++ b/apps/api/src/templates/invoice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +16,25 @@
             align-items: center;
             min-height: 100vh;
         }
+
+        h1{
+            color: #555;
+            font-weight: 100;
+        }
+
+        .separator {
+            padding-top: 20px;
+            padding-left: 12px;
+            padding-right: 12px;
+            display: flex;
+            justify-content: space-between;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .img {
+            display: none;
+        }
+
         .invoice-container {
             background-color: #fff;
             padding: 20px;
@@ -24,33 +44,51 @@
             max-width: 800px;
             margin: 20px;
         }
-        h1 {
+
+        header {
+            display: flex;
+            justify-content: space-between;
             color: #333;
             border-bottom: 2px solid #f4f4f9;
             padding-bottom: 10px;
         }
+
         p {
             color: #555;
             margin: 10px 0;
             font-size: 16px;
         }
+
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-        th, td {
+
+        th,
+        td {
             border: 1px solid #ddd;
             padding: 12px;
             text-align: left;
         }
+
         th {
             background-color: #f4f4f9;
             color: #333;
         }
+
+        tfoot .total {
+            background-color: rgb(142, 141, 164);
+        }
+
+        .shippingCost {
+            background-color: rgb(182, 192, 195);
+        }
+
         tbody tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+
         .total {
             font-size: 18px;
             font-weight: bold;
@@ -58,15 +96,29 @@
         }
     </style>
 </head>
+
 <body>
-    <div class="invoice-container">
-        <h1>Order Invoice</h1>
-        <p>Name: {{name}}</p>
-        <p>Status: {{status}}</p>
-        <p>Payment Status: {{paymentStatus}}</p>
-        <p>Total Amount: <span class="total">{{totalAmount}}</span></p>
-        <p>Created At: {{createdAt}}</p>
-        <p>Warehouse: {{warehouse}}</p>
+    <section class="invoice-container">
+        <header>
+            <h1>WearDrobe</h1>
+            <h1>#{{orderId}}</h1>
+        </header>
+        <div class="separator">
+            <div>
+                <p>Name: {{name}}</p>
+                <p>Status: {{status}}</p>
+                <p>Payment Status: {{paymentStatus}}</p>
+                <p>Created At: {{createdAt}}</p>
+                <p>Warehouse: {{warehouse}}</p>
+                <p>Shipped from {{warehouseLoc}}</p>
+                <p>To {{address}}</p>
+            </div>
+            <div class="img">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{qrData}}" alt="">
+                <p>scan here to see more detail</p>
+            </div>
+
+        </div>
         <table>
             <thead>
                 <tr>
@@ -84,14 +136,30 @@
                     <td>{{productVariant.color}}</td>
                     <td>{{size}}</td>
                     <td>{{quantity}}</td>
-                    <td>{{price}}</td>
+                    <td>Rp.{{price}}</td>
                 </tr>
                 {{/each}}
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="shippingCost">Shipping Cost</td>
+                    <td>Rp.{{shippingCost}}</td>
+                </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="total">Total Amount</td>
+                    <td>Rp.{{totalAmount}}</td>
+                </tr>
+            </tfoot>
         </table>
-    </div>
+        <h1>Thank you for your Order</h1>
+
+    </section>
 </body>
+
 </html>
-
-
-
