feat: manage address (user), manage warehouse, user, admin (super admin)

--- a/apps/api/src/templates/register.html
+++ b/apps/api/src/templates/register.html
@@ -20,12 +20,21 @@
 
     <a href="{{ link }}" target="_blank">
         <button style="
-        cursor: pointer;
-        padding: 10px 2.5rem;
-        border-radius: 6px;
-        border: 0px;
-        background-color: #FDE047;"
-        >Verify</button>
+            cursor: pointer;
+            padding: 10px 2.5rem;
+            border-radius: 6px;
+            border: 0px;
+            color: #fff;
+            background-color: #000;
+            display: flex;
+            justify-items: center;
+            gap: 10px;
+        "
+        >Verify
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+            </svg>
+        </button>
     </a>
 </body>
 </html>
