feat: added table for user order on admin dashboard

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -93,6 +93,15 @@
     .input-layout-user-profile {
         @apply flex flex-col lg:flex-row items-start w-full gap-1 lg:items-center justify-between;
     }
+
+    .input-width-admin-profile {
+
+    }
+
+    .input-layout-admin-profile {
+        
+    }
+
 }
 
 .scrollcontrol {
